--- a/index.html
+++ b/index.html
@@ -1,11 +1,97 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1> Hello world</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BidHaven | Home</title>
+    <meta
+      name="description"
+      content="Welcome to BidHaven! Your online auctions house where you can bid on anything."
+    />
+    <link rel="stylesheet" href="/dist/css/styles.css" />
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="/src/js/index.mjs"></script>
+  </head>
+  <body>
+    <!--Start of header-->
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/index.html">
+            <img
+              src="/src/assets/logo/bidhaven-logo.png"
+              alt="Brand Logo"
+              class="d-inline-block align-text-top"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="nav-items">
+              <!-- Nav items should be dynamic inserted here -->
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!--Start of main-->
+    <div class="hero-section">
+      <div class="container">
+        <h1>
+          Join BidHaven Today <br />
+          and Get 1000 Credit <br />
+          Points for Free!
+        </h1>
+        <p>
+          Unlock your auction journey and discover treasures waiting to be won!
+        </p>
+        <a role="button" class="btn btn-primary" href="/signup/index.html"
+          >Join here</a
+        >
+      </div>
+    </div>
+    <div class="listing-section">
+      <div class="container">
+        <h1>Explore listings</h1>
+        <div class="filter-listings">
+          <nav class="navbar row rounded pt-3 pb-3 mb-2 bg-white">
+            <form class="col justify-content-end" role="search">
+              <input
+                class="form-control me-2 bg-white"
+                type="search"
+                placeholder="Search"
+                aria-label="Search listings"
+                name="searchInput"
+                id="searchInput"
+              />
+            </form>
+            <div class="col-4">
+              <select
+                class="form-select bg-white"
+                aria-label="Sort listings"
+                name="filter"
+                id="filter"
+              >
+                <option selected>Latest</option>
+                <option value="az">A-Z</option>
+                <option value="za">Z-A</option>
+              </select>
+            </div>
+          </nav>
+        </div>
+        <div class="listings">
+          <!--Listing items dynamic inserted here-->
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
