adds custom font

--- a/login/index.html
+++ b/login/index.html
@@ -8,6 +8,12 @@
       name="description"
       content="Welcome to BidHaven! Please login to embark on the fun of bidding."
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/dist/css/styles.css" />
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="/src/js/index.mjs"></script>
