updates link to signup

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         <p>
           Unlock your auction journey and discover treasures waiting to be won!
         </p>
-        <a role="button" class="btn btn-primary" href="/signup/index.html"
+        <a
+          role="button"
+          class="btn btn-primary"
+          href="/profile/signup/index.html"
           >Join here</a
         >
       </div>
