adds registration form and information

--- a/profile/signup/index.html
+++ b/profile/signup/index.html
@@ -50,5 +50,82 @@
       </nav>
     </header>
     <!--Start of main-->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col">
+          <form id="register-form">
+            <div class="mb-3 form-group">
+              <label
+                for="username"
+                class="form-label"
+                aria-label="Input for username"
+                >Username</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="username"
+                placeholder=""
+              />
+            </div>
+            <div class="mb-3 form-group">
+              <label
+                for="emailinput"
+                class="form-label"
+                aria-label="Input for e-mail address"
+                >Email</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="emailinput"
+                placeholder=""
+              />
+            </div>
+            <div class="mb-3 form-group">
+              <label
+                for="password"
+                class="form-label"
+                aria-label="Input for password"
+                >Password:</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="password"
+                placeholder=""
+              />
+            </div>
+            <div class="mb-3 form-group">
+              <label
+                for="avatar"
+                class="form-label"
+                aria-label="Input for avatar URL"
+                >Avatar URL</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="avatar"
+                placeholder=""
+              />
+            </div>
+            <button type="submit" class="btn btn-primary">Sign up</button>
+          </form>
+        </div>
+        <div class="col">
+          <h1>
+            Join BidHaven Today <br />
+            and Get 1000 Credit <br />
+            Points for Free!
+          </h1>
+          <p>Fill out the form and join the fun of bidding!</p>
+          <p>
+            Already a member?
+            <a href="/profile/login/index.html">Log in to your account here!</a>
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
