adds login form

--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -50,5 +50,46 @@
       </nav>
     </header>
     <!--Start of main-->
+    <div class="container align-content-center">
+      <div class="col-4">
+        <div class="card">
+          <form id="login-form">
+            <div class="mb-3 form-group">
+              <label
+                for="emailinput"
+                class="form-label"
+                aria-label="Input for e-mail address"
+                >Email</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="emailinput"
+                placeholder=""
+              />
+            </div>
+            <div class="mb-3 form-group">
+              <label
+                for="password"
+                class="form-label"
+                aria-label="Input for password"
+                >Password:</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="password"
+                placeholder=""
+              />
+            </div>
+            <p>
+              Not a member?
+              <a href="/profile/signup/index.html">Sign up here!</a>
+            </p>
+            <button type="submit" class="btn btn-primary">Login</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
