--- a/profile/signup/index.html
+++ b/profile/signup/index.html
@@ -50,74 +50,78 @@
       </nav>
     </header>
     <!--Start of main-->
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col">
-          <form id="register-form">
-            <div class="mb-3 form-group">
-              <label
-                for="username"
-                class="form-label"
-                aria-label="Input for username"
-                >Username</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="username"
-                placeholder=""
-              />
-            </div>
-            <div class="mb-3 form-group">
-              <label
-                for="emailinput"
-                class="form-label"
-                aria-label="Input for e-mail address"
-                >Email</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="emailinput"
-                placeholder=""
-              />
-            </div>
-            <div class="mb-3 form-group">
-              <label
-                for="password"
-                class="form-label"
-                aria-label="Input for password"
-                >Password:</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="password"
-                placeholder=""
-              />
-            </div>
-            <div class="mb-3 form-group">
-              <label
-                for="avatar"
-                class="form-label"
-                aria-label="Input for avatar URL"
-                >Avatar URL</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="avatar"
-                placeholder=""
-              />
-            </div>
-            <button type="submit" class="btn btn-primary">Sign up</button>
-          </form>
+    <div class="container">
+      <div class="row align-items-center">
+        <div
+          class="col-md-6 d-flex justify-content-center order-2 order-md-1 mb-md-0"
+        >
+          <div class="card rounded" style="width: 350px">
+            <form id="register-form">
+              <div class="mx-3 mb-3 form-group mt-4">
+                <label
+                  for="username"
+                  class="form-label"
+                  aria-label="Input for username"
+                  >Username</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="username"
+                  placeholder=""
+                />
+              </div>
+              <div class="mx-3 mb-3 form-group">
+                <label
+                  for="emailinput"
+                  class="form-label"
+                  aria-label="Input for e-mail address"
+                  >Email</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="emailinput"
+                  placeholder=""
+                />
+              </div>
+              <div class="mx-3 mb-3 form-group">
+                <label
+                  for="password"
+                  class="form-label"
+                  aria-label="Input for password"
+                  >Password:</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="password"
+                  placeholder=""
+                />
+              </div>
+              <div class="mx-3 mb-3 form-group">
+                <label
+                  for="avatar"
+                  class="form-label"
+                  aria-label="Input for avatar URL"
+                  >Avatar URL</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="avatar"
+                  placeholder=""
+                />
+              </div>
+              <div class="text-center mb-4">
+                <button type="submit" class="btn btn-primary">Sign up</button>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="col">
+        <div class="col-md-4 text-center order-md-2 mb-md-0">
           <h1>
-            Join BidHaven Today <br />
-            and Get 1000 Credit <br />
-            Points for Free!
+            Join BidHaven Today <br />and Get 1000 Credit <br />Points for Free!
           </h1>
           <p>Fill out the form and join the fun of bidding!</p>
           <p>
