adds form to add new listing

--- a/listing/add-new/index.html
+++ b/listing/add-new/index.html
@@ -50,5 +50,87 @@
       </nav>
     </header>
     <!--Start of main-->
+    <div class="container mt-lg-4">
+      <div class="card rounded m-auto" style="max-width: 800px">
+        <form id="add-listing" class="m-5">
+          <h1 class="fs-5 text-center mb-4">Add new listing</h1>
+          <div class="mb-3 form-group">
+            <label for="title" class="form-label" aria-label="Input for title"
+              >Title</label
+            >
+            <input type="text" class="form-control" id="title" placeholder="" />
+          </div>
+          <div class="mb-3 form-group">
+            <label
+              for="description"
+              class="form-label"
+              aria-label="Input for description of product"
+              >Description</label
+            >
+            <textarea
+              type="text"
+              class="form-control"
+              id="description"
+              name="description"
+              placeholder=""
+            ></textarea>
+          </div>
+          <div class="mb-3 form-group">
+            <label
+              for="image"
+              class="form-label"
+              aria-label="Input for image url"
+              >Image</label
+            >
+            <input
+              type="url"
+              class="form-control"
+              id="image"
+              name="image"
+              placeholder=""
+            />
+          </div>
+          <div class="mb-3 form-group">
+            <label for="tags" class="form-label" aria-label="Input for tags"
+              >Tags</label
+            >
+            <input
+              type="text"
+              class="form-control"
+              id="tags"
+              name="tags"
+              placeholder=""
+            />
+          </div>
+          <div class="mb-3 form-group">
+            <label
+              for="deadline"
+              class="form-label"
+              aria-label="Input for deadline date"
+              >Deadline date</label
+            >
+            <input
+              type="text"
+              class="form-control"
+              id="tags"
+              name="tags"
+              placeholder=""
+            />
+          </div>
+          <hr />
+          <div class="text-center">
+            <h2 class="fs-5">Ready to publish?</h2>
+            <p class="mb-4">
+              When you click publish your listing goes live!<br />
+              The listing information will be displayed publicy.
+            </p>
+            <p>You can view your listings on your profile page.</p>
+            <div class="mb-3">
+              <button type="submit" class="btn btn-primary">Publish</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
