add starting point styling and id's for js

--- a/listing/index.html
+++ b/listing/index.html
@@ -50,5 +50,26 @@
       </nav>
     </header>
     <!--Start of main-->
+    <div class="container m-auto mt-4">
+      <div class="row gx-4 mb-4">
+        <div class="card col-md-6 rounded" style="height: 590px">
+          <div class="m-3" id="#listing-media">
+            <!--Dynamically insert info here-->
+          </div>
+        </div>
+        <div class="card col-md-6 rounded">
+          <div class="m-3" id="#listing-info">
+            <!--Dynamically insert info here-->
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="card col-md-12 rounded">
+          <div class="m-3" id="#bid-history">
+            <!--Dynamically insert info here-->
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
