--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!--Start of header-->
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="/index.html">
             <img
@@ -74,10 +74,10 @@
         <div class="container">
           <h1 class="text-center">Explore listings</h1>
           <div class="filter-listings">
-            <nav class="navbar row rounded pt-3 pb-3 mb-2 bg-white">
+            <nav class="navbar row rounded pt-3 pb-3 mb-2">
               <form class="col justify-content-end" role="search">
                 <input
-                  class="form-control me-2 bg-white"
+                  class="form-control me-2"
                   type="search"
                   placeholder="Search"
                   aria-label="Search listings"
@@ -87,7 +87,7 @@
               </form>
               <div class="col-4">
                 <select
-                  class="form-select bg-white"
+                  class="form-select"
                   aria-label="Sort listings"
                   name="filter"
                   id="filter"
