--- a/profile/signup/index.html
+++ b/profile/signup/index.html
@@ -21,7 +21,7 @@
   <body>
     <!--Start of header-->
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="/index.html">
             <img
