update form type and name

--- a/profile/signup/index.html
+++ b/profile/signup/index.html
@@ -96,7 +96,7 @@
                   >Password:</label
                 >
                 <input
-                  type="text"
+                  type="password"
                   class="form-control"
                   name="password"
                   minlength="8"
