--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -57,7 +57,7 @@
             <h1 class="fs-5 text-center mb-4">Login to your account!</h1>
             <div class="mb-3 form-group">
               <label
-                for="emailinput"
+                for="email"
                 class="form-label"
                 aria-label="Input for e-mail address"
                 >Email</label
@@ -65,8 +65,9 @@
               <input
                 type="text"
                 class="form-control"
-                id="emailinput"
-                placeholder=""
+                name="email"
+                pattern="^[^\s@]+@(stud.noroff.no)$"
+                required
               />
             </div>
             <div class="mb-3 form-group">
@@ -77,10 +78,11 @@
                 >Password</label
               >
               <input
-                type="text"
+                type="password"
                 class="form-control"
-                id="password"
-                placeholder=""
+                name="password"
+                minlength="8"
+                required
               />
             </div>
             <p class="text-center mb-4">
