adds main element and updates id

--- a/profile/index.html
+++ b/profile/index.html
@@ -50,26 +50,28 @@
       </nav>
     </header>
     <!--Start of main-->
-    <div class="container row m-auto mt-4">
-      <div class="col-3">
-        <div class="card rounded text-center" style="height: 590px">
-          <div class="m-3" id="#profile-info">
-            <!--Dynamically insert info here-->
+    <main>
+      <div class="container row m-auto mt-4">
+        <div class="col-3">
+          <div class="card rounded text-center" style="height: 590px">
+            <div class="m-3" id="profile-info">
+              <!--Dynamically insert info here-->
+            </div>
+          </div>
+        </div>
+        <div class="col-9">
+          <div class="card rounded mb-4" style="height: 283px">
+            <div class="m-3" id="#listings">
+              <!--Dynamically insert info here-->
+            </div>
+          </div>
+          <div class="card rounded" style="height: 283px">
+            <div class="m-3" id="#bid-history">
+              <!--Dynamically insert info here-->
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-9">
-        <div class="card rounded mb-4" style="height: 283px">
-          <div class="m-3" id="#listings">
-            <!--Dynamically insert info here-->
-          </div>
-        </div>
-        <div class="card rounded" style="height: 283px">
-          <div class="m-3" id="#bid-history">
-            <!--Dynamically insert info here-->
-          </div>
-        </div>
-      </div>
-    </div>
+    </main>
   </body>
 </html>
