adds hardcoded text that doesn't change

--- a/profile/index.html
+++ b/profile/index.html
@@ -53,7 +53,7 @@
     <main>
       <div class="container row m-auto mt-4">
         <div class="col-3">
-          <div class="card rounded text-center" style="height: 590px">
+          <div class="card rounded" style="height: 590px">
             <div class="m-3" id="profile-info">
               <!--Dynamically insert info here-->
             </div>
@@ -62,11 +62,23 @@
         <div class="col-9">
           <div class="card rounded mb-4" style="height: 283px">
             <div class="m-3" id="#listings">
+              <p class="text-primary fs-5 mt-4">Your listings</p>
+              <div class="row fs-5">
+                <p class="col">Title</p>
+                <p class="col">Description</p>
+                <p class="col">Status</p>
+              </div>
               <!--Dynamically insert info here-->
             </div>
           </div>
           <div class="card rounded" style="height: 283px">
             <div class="m-3" id="#bid-history">
+              <p class="text-primary fs-5 mt-4">Bid history</p>
+              <div class="row fs-5">
+                <p class="col">Title</p>
+                <p class="col">Amount</p>
+                <p class="col">Status</p>
+              </div>
               <!--Dynamically insert info here-->
             </div>
           </div>
