--- a/listing/add-new/index.html
+++ b/listing/add-new/index.html
@@ -42,7 +42,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="nav-items">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="nav-items">
               <!-- Nav items should be dynamic inserted here -->
             </ul>
           </div>
