update class/id for listings

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               </div>
             </nav>
           </div>
-          <div class="listings">
+          <div id="listings">
             <!--Listing items dynamic inserted here-->
           </div>
         </div>
