adds some styling to text homepage + navbar toggler

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </header>
     <!--Start of main-->
     <main>
-      <div class="hero-section" style="height: 500px">
+      <div class="hero-section">
         <div class="container text-center">
-          <h1>
+          <h1 class="text-primary" style="font-size: 48px">
             Join BidHaven Today <br />
             and Get 1000 Credit <br />
             Points for Free!
