--- a/listing/index.html
+++ b/listing/index.html
@@ -51,21 +51,19 @@
     </header>
     <!--Start of main-->
     <div class="container m-auto mt-4">
-      <div class="row gx-4 mb-4">
-        <div class="card col-md-6 rounded" style="height: 590px">
-          <div class="m-3" id="#listing-media">
-            <!--Dynamically insert info here-->
-          </div>
+      <div class="row g-3">
+        <div class="card col-md rounded" id="listing-media">
+          <!--Dynamically insert info here-->
         </div>
-        <div class="card col-md-6 rounded">
-          <div class="m-3" id="#listing-info">
+        <div class="card col-md rounded ms-md-3">
+          <div class="m-3" id="listing-info">
             <!--Dynamically insert info here-->
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-3">
         <div class="card col-md-12 rounded">
-          <div class="m-3" id="#bid-history">
+          <div class="m-3" id="bid-history">
             <!--Dynamically insert info here-->
           </div>
         </div>
