updates select options

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                   name="filter"
                   id="filter"
                 >
-                  <option selected>Latest</option>
-                  <option value="az">A-Z</option>
-                  <option value="za">Z-A</option>
+                  <option value="latest" selected>Latest</option>
+                  <option value="endSoon">Ending Soon</option>
+                  <option value="popular">Most Bids</option>
                 </select>
               </div>
             </nav>
