--- a/profile/index.html
+++ b/profile/index.html
@@ -60,8 +60,8 @@
           </div>
         </div>
         <div class="col-9">
-          <div class="card rounded mb-4" style="height: 283px">
-            <div class="m-3" id="#listings">
+          <div class="card rounded mb-4">
+            <div class="m-3" id="user-listings">
               <p class="text-primary fs-5 mt-4">Your listings</p>
               <div class="row fs-5">
                 <p class="col">Title</p>
@@ -71,8 +71,8 @@
               <!--Dynamically insert info here-->
             </div>
           </div>
-          <div class="card rounded" style="height: 283px">
-            <div class="m-3" id="#bid-history">
+          <div class="card rounded">
+            <div class="m-3" id="user-bid-history">
               <p class="text-primary fs-5 mt-4">Bid history</p>
               <div class="row fs-5">
                 <p class="col">Title</p>
