updates spacing between elements

--- a/listing/add-new/index.html
+++ b/listing/add-new/index.html
@@ -97,7 +97,7 @@
               placeholder=""
             />
           </div>
-          <div class="mb-3 form-group">
+          <div class="form-group pb-3">
             <label
               for="deadline"
               class="form-label"
@@ -114,13 +114,15 @@
             />
           </div>
           <hr />
-          <div class="text-center">
+          <div class="text-center pt-3">
             <h2 class="fs-5">Ready to publish?</h2>
-            <p class="mb-4">
+            <p>
               When you click publish your listing goes live!<br />
               The listing information will be displayed publicy.
             </p>
-            <p>You can view your listings on your profile page.</p>
+            <p class="pb-2">
+              You can view your published listings on your profile page.
+            </p>
             <div class="mb-3">
               <button type="submit" class="btn btn-primary">Publish</button>
             </div>
